--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                 <li><a href="index.html" target="page">Trang Chủ</a></li>
                 <li><a href="about.html">Giới Thiệu</a></li>
                 <li><a href="contact.html">Liên Hệ</a></li>
-                <li><a href="index.html">Xem ONLINE</a></li>
+                <li><a href=" https://cuonghmtb.github.io/cuonghmtb/">Xem ONLINE</a></li>
             </ul>
         </nav>
         <article>
